--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "rimraf": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.17.3",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.0"
