--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,3 @@
-.idea
-src
-.babelrc
-.prettierignore
-.prettierrc
-jest.config.json
-package-lock.json
-webpack.config.js
+**
+!dist/**
+!package.json
