--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@twyla-ai/widget-core",
   "version": "0.10.0",
-  "description": "",
+  "description": "Twyla Widget Core",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "main": "dist/twyla-widget-core.min.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npm run clean && npx webpack --mode production",
     "clean": "npx rimraf dist",
+    "pre-publish": "npm run build",
     "test": "npx jest --no-cache ./src"
   },
   "author": "Twyla GmbH",
@@ -37,5 +38,8 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "directories": {
+    "dist": "dist"
   }
 }
