--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "npx rimraf dist",
     "documentation": "node document.js",
     "pre-publish": "npm run build",
+    "publish": "npm publish --access public",
     "test": "npx jest --no-cache ./src"
   },
   "author": "Twyla GmbH",
