--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@twyla-ai/widget-core",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Twyla Widget Core",
   "main": "dist/index.js",
   "scripts": {
@@ -8,6 +8,7 @@
     "clean": "npx rimraf dist",
     "documentation": "node document.js",
     "pre-publish": "npm run build",
+    "publish": "npm publish --access public",
     "test": "npx jest --no-cache ./src"
   },
   "author": "Twyla GmbH",
