--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,11 @@ jobs:
           name: Build
           command: |
             npm run build
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - workspace
+            - .npm
   publish:
     executor: npm-executor
     resource_class: small
@@ -56,8 +61,9 @@ jobs:
       - run:
           name: publish release package to npm registry
           command: |
+            ls
             echo "//registry.npmjs.org/:_authToken=${NPM_PUBLISH_TOKEN}" > .npmrc
-            npm run publish
+#            npm run publish
 
 workflows:
   version: 2.1
@@ -87,5 +93,5 @@ workflows:
           filters:
             tags:
               only: /^v.*/
-            branches:
-              ignore: /.*/
+#            branches:
+#              ignore: /.*/
