--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.11.1",
   "description": "Twyla Widget Core",
   "main": "dist/index.js",
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com/"
+  },
   "scripts": {
     "build": "npm run clean && npx webpack --mode production",
     "clean": "npx rimraf dist",
     "documentation": "node document.js",
     "pre-publish": "npm run build",
-    "publish": "npm publish --access public",
     "test": "npx jest --no-cache ./src"
   },
   "author": "Twyla GmbH",
