--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,19 +70,19 @@ workflows:
       - install:
           filters:
             tags:
-              only: /^v.*/
+              only: /^v?([0-9].*\.[0-9].*\.[0-9].*)$/
       - test:
           requires:
             - install
           filters:
             tags:
-              only: /^v.*/
+              only: /^v?([0-9].*\.[0-9].*\.[0-9].*)$/
       - build:
           requires:
             - install
           filters:
             tags:
-              only: /^v.*/
+              only: /^v?([0-9].*\.[0-9].*\.[0-9].*)$/
       - publish:
           context: Build
           requires:
