--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,16 +53,25 @@ jobs:
             - workspace
             - .npm
   publish:
+    description: "Publish package aritfacts to a specified registry"
     executor: npm-executor
     resource_class: small
+    parameters:
+      registry:
+        default: registry.npmjs.org
+        type: string
+      token_var:
+        default: NPM_PUBLISH_TOKEN
+        type: string
     steps:
       - attach_workspace:
           at: ~/
       - run:
           name: publish release package to npm registry
           command: |
-            echo "//npm.pkg.github.com/:_authToken=${GITHUB_REGISTRY_ACCESS_TOKEN}" > .npmrc
-            npm publish
+            echo "@twyla-ai:registry=https://<< parameters.registry >>/" > .npmrc
+            echo "//<< parameters.registry >>/:_authToken=${<< parameters.token_var >>}" >> .npmrc
+            npm publish --access public
 
 workflows:
   ci-checks:
@@ -84,6 +93,22 @@ workflows:
             tags:
               only: /^v?([0-9].*\.[0-9].*\.[0-9].*)$/
       - publish:
+          name: Publish to npmjs.org
+          registry: registry.npmjs.org
+          token_var: NPM_PUBLISH_TOKEN
+          context: Build
+          requires:
+            - test
+            - build
+          filters:
+            tags:
+              only: /^v?([0-9].*\.[0-9].*\.[0-9].*)$/
+            branches:
+              ignore: /.*/
+      - publish:
+          name: Publish to GitHub Package Registry
+          registry: npm.pkg.github.com
+          token_var: GITHUB_REGISTRY_ACCESS_TOKEN
           context: Build
           requires:
             - test
