--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "documentation": "^12.0.2",
     "husky": "^3.0.0",
     "jest": "^24.8.0",
+    "jest-localstorage-mock": "^2.4.0",
     "mock-socket": "^9.0.0",
     "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
