--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@twyla-ai/widget-core",
-  "version": "0.12.0",
+  "version": "1.0.0-0",
   "description": "Twyla Widget Core",
   "main": "dist/index.js",
   "scripts": {
