Actions: Ensure packages are build before publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,32 +5,30 @@ on:
     types: [published]
 
 jobs:
-  publish-npm:
+  publish:
     runs-on: ubuntu-latest
-    name: Publish package (registry.npmjs.org)
+    name: Publish package to registries
     steps:
       - uses: actions/checkout@v1
-      - name: Setup node
+      - name: Setup node (registry.npmjs.org)
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
           registry-url: https://registry.npmjs.org/
-      - name: Publish Package
+      - name: Install package dependencies
+        run: npm ci
+      - name: Build package
+        run: npm run build
+      - name: Publish Package (registry.npmjs.org)
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish --access public
-
-  publish-gh:
-    runs-on: ubuntu-latest
-    name: Publish package (npm.pkg.github.com)
-    steps:
-      - uses: actions/checkout@v1
-      - name: Setup node
+      - name: Setup node (npm.pkg.github.com)
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
           registry-url: https://npm.pkg.github.com/twyla-ai
-      - name: Publish Package
+      - name: Publish Package (npm.pkg.github.com)
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish --access public
